<resources>
    <string name="app_name">EventHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="inregistreaza_te">Inregistreaza-te</string>
    <string name="autentifica_te">Autentifica-te</string>
    <string name="google">google</string>
    <string name="apple">apple</string>
    <string name="fb">fb</string>
    <string name="email_address">Adresa de email</string>
    <string name="password">Parola</string>
    <string name="intra_in_cont">INTRA IN CONT</string>
    <string name="creeaza_cont">CREEAZA CONT</string>
    <string name="ai_deja_cont">Ai deja cont?</string>
    <string name="confirma_parola">Confirma parola</string>
    <string name="nume_si_prenume">Nume si prenume</string>
    <string name="inca_nu_ai_cont">Inca nu ai cont?</string>
    <string name="app_logo">App logo</string>
    <string name="temperature">16°C</string>
    <string name="oradea_romania">Oradea, Romania</string>
    <string name="cauta_evenimente">Cauta evenimente</string>
    <string name="nameerror">Introduceti numele</string>
    <string name="emailerror">Introduceti o adresa de mail valida</string>
    <string name="passerror">Parola trebuie sa contina cel putin 8 caractere, o litera mare, una mica si un caracter special</string>
    <string name="confirmerror">Parola trebuie sa fie aceeasi</string>
    <string name="astazi">Astazi</string>
    <string name="top_10_evenimente_in_aceasta_saptamana">Top 10 evenimente in aceasta saptamana</string>
    <string name="evenimente_populare">Evenimente populare</string>
    <string name="maine">Maine</string>
    <string name="saptamana_aceasta">Saptamana aceasta</string>
    <string name="home">Acasa</string>
    <string name="profile">Profil</string>
    <string name="search">Cauta</string>
    <string name="eveniment_recomandat">Eveniment recomandat</string>
    <string name="evenimente_aproape_de_tine">Evenimente aproape de tine</string>
    <string name="nu_ai_gasit_ceva_pe_placul_tau">Nu ai gasit ceva pe
placul tau?</string>
    <string name="organizeaza_un_eveniment">Organizeaza un eveniment</string>
    <string name="evenimentul_tau">Evenimentul tau</string>
    <string name="nume_event">Nume event</string>
    <string name="ora_eveniment">Ora eveniment</string>
    <string name="continua">Continua</string>
    <string name="data_evenimentului">Data evenimentului</string>
    <string name="descrie_eveniment">Descrie eveniment</string>
    <string name="vincent_van_gogh_o_experien_imersiv">Vincent Van Gogh:
  O experiență imersivă</string>
    <string name="depeche_mode_n_bucure_ti_memento_mori_tour">Depeche Mode în București -
 Memento Mori Tour</string>
    <string name="_2_5k_participanti">2.5k Participanti</string>
    <string name="curs_de_gastronomie_cooking_around_the_world">Curs de gastronomie: Cooking Around The World</string>
    <string name="eventhub">EventHub</string>
</resources>