<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eventhub.feature_onboarding.onboarding_fragments.RegisterFrag">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHomeBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/homebartop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Data sistemului"
            android:textColor="@color/homebarcolor"
            android:textAllCaps="true"
            android:layout_marginTop="44sp"
            android:layout_marginStart="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/ivCloud"
            android:layout_width="14sp"
            android:layout_height="10sp"
            android:layout_marginLeft="9dp"
            android:src="@drawable/cloud"
            app:layout_constraintBottom_toBottomOf="@+id/tvTemperature"
            app:layout_constraintLeft_toRightOf="@id/tvDate"
            app:layout_constraintTop_toTopOf="@id/tvTemperature" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2sp"
            android:layout_marginTop="44sp"
            android:text="@string/temperature"
            android:textColor="@color/homebarcolor"
            app:layout_constraintLeft_toRightOf="@id/ivCloud"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oradea_romania"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tvDate"
            app:layout_constraintStart_toStartOf="@id/tvDate"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSearch"
            android:layout_width="308sp"
            android:layout_height="40sp"
            android:layout_marginTop="18dp"
            android:background="@drawable/hometopbarinputtext"
            app:layout_constraintLeft_toLeftOf="@id/tvLocation"
            app:layout_constraintTop_toBottomOf="@id/tvLocation">

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:hint="@string/cauta_evenimente"
                android:textColorHint="@color/searchhint"
                android:textColor="@color/searchhint"
                android:background="@drawable/hometopbarinputtext"/>


        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="15sp"
            android:layout_height="15sp"
            android:layout_marginLeft="17dp"
            android:src="@drawable/search"
            app:layout_constraintBottom_toBottomOf="@id/tilSearch"
            app:layout_constraintLeft_toLeftOf="@id/tilSearch"
            app:layout_constraintTop_toTopOf="@id/tilSearch" />

        <ImageView
            android:id="@+id/ivFilters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29sp"
            android:background="@drawable/filters"
            app:layout_constraintLeft_toRightOf="@id/tilSearch"
            app:layout_constraintBottom_toBottomOf="@id/tilSearch"
            app:layout_constraintTop_toTopOf="@id/tilSearch"/>

        <Button
            android:id="@+id/btnToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="23dp"
            android:background="@drawable/home_button_1"
            android:text="@string/astazi"
            android:textSize="11sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/clHomeBar"
            app:layout_constraintStart_toStartOf="@id/tilSearch"
            app:layout_constraintTop_toBottomOf="@id/tilSearch" />

        <Button
            android:id="@+id/btnTomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/home_button_2"
            android:text="@string/maine"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@id/btnToday"
            app:layout_constraintStart_toEndOf="@id/btnToday"
            app:layout_constraintTop_toTopOf="@id/btnToday" />

        <Button
            android:id="@+id/btnThisWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/home_button_3"
            android:text="@string/saptamana_aceasta"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:paddingLeft="21sp"
            android:paddingRight="21sp"
            app:layout_constraintBottom_toBottomOf="@id/btnToday"
            app:layout_constraintStart_toEndOf="@id/btnTomorrow"
            app:layout_constraintTop_toTopOf="@id/btnToday"
            app:layout_constraintEnd_toEndOf="@id/ivFilters"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/svHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/clHomeBar"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="155dp" />

        <TextView
            android:id="@+id/tvTop10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_10_evenimente_in_aceasta_saptamana"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/svHome"
            app:layout_constraintStart_toStartOf="@id/svHome"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTopTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/top10"
            app:layout_constraintTop_toBottomOf="@id/tvTop10"
            app:layout_constraintStart_toStartOf="@id/svHome"/>

        <TextView
            android:id="@+id/tvPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evenimente_populare"
            android:textSize="18sp"
            android:layout_marginTop="40sp"
            app:layout_constraintTop_toBottomOf="@id/rvTopTen"
            app:layout_constraintStart_toStartOf="@id/svHome"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/popular"
            app:layout_constraintTop_toBottomOf="@id/tvPopular"
            app:layout_constraintStart_toStartOf="@id/rvTopTen"/>

        <TextView
            android:id="@+id/tvNearYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/evenimente_aproape_de_tine"
            app:layout_constraintTop_toBottomOf="@id/rvPopular"
            app:layout_constraintStart_toStartOf="@id/rvPopular"
            android:layout_marginTop="43sp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNearYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/near_you"
            app:layout_constraintTop_toBottomOf="@id/tvNearYou"
            app:layout_constraintStart_toStartOf="@id/tvNearYou"/>

    />





</androidx.constraintlayout.widget.ConstraintLayout>