<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="feature_onboarding.LoginFrag">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:contentDescription="App logo"
        android:src="@drawable/eventhubss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/aut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/autentifica_te"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/logbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="INTRA IN CONT"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon"
        app:layout_constraintVertical_bias="0.547" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/user"
        android:layout_width="400sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/logbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon">
        <EditText
            android:id="@+id/emailaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0sp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            />

        <EditText
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0sp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>